--- a/.github/workflows/ci-cd-test.yml
+++ b/.github/workflows/ci-cd-test.yml
@@ -22,17 +22,12 @@ on:
   workflow_dispatch:
 
 jobs:
-
-  job_test:
-
-  runs-on: ubuntu-latest
-  
+  build-gradle-project:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout project sources
-          uses: actions/checkout@v3
-    
-      - name: Setup Gradle
-          uses: gradle/gradle-build-action@v2
-    
-      - name: Run build with Gradle Wrapper
-          run: ./gradlew build
+    - name: Checkout project sources
+      uses: actions/checkout@v3
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Run build with Gradle Wrapper
+      run: ./gradlew build
