--- a/.github/workflows/ci-cd-test.yml
+++ b/.github/workflows/ci-cd-test.yml
@@ -12,7 +12,7 @@ on:
     
     branches:  
       - "master" 
-      - "CINEMA_API_**"
+      - "CINEMA_API_*"
     
   pull_request:
     branches:  
