--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,25 +1,15 @@
 # This is a basic workflow to help you get started with Actions
 
-name: job_test
+name: Gradle Ci 
 
 # Controls when the workflow will run
 on: 
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-  
-    paths:
-    - "**.groovy"
-    
-    branches:  
-      - "master" 
-      - "CINEMA_API_.*"
+    branches: ["*"]
     
   pull_request:
-    branches:  
-      - "master" 
-      - "CINEMA_API_.*"
-    
-  workflow_dispatch:
+    branches: ["*"]
 
 jobs:
   build-gradle-project:
