--- a/war/src/test/resources/application.yml
+++ b/war/src/test/resources/application.yml
@@ -1,13 +1,8 @@
 spring:
   datasource:
-    url: jdbc:tc:postgresql-alpine:///testdb?TC_INITSCRIPT=init_postgres.sql
-    username: test
-    password: test
+    url: jdbc:tc:mysql:5.7.34://testdb?TC_INITSCRIPT=init_mysql.sql
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    exposed-ports: 54326
-
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
-    hibernate:
-      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
