CINEMA_API_2.1 new tests, controller advice wip!

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -17,8 +17,12 @@ logging:
         type: TRACE
 
 server:
+  error:
+    include-message: always
   servlet:
     context-path: /cinema-gateway
 springdoc:
   swagger-ui:
     path: /swagger.html
+
+
