CINEMA_API_2.2 - changes in gradle builds (mainly got rid of boilerplate impl's - changed into a wrapping build). Changes in entities, dto's, added service tests, controller tests. Wip e2e tests

--- a/war/src/test/resources/application.yml
+++ b/war/src/test/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  flyway:
+    enabled: false
   datasource:
     url: jdbc:tc:mysql:5.7.34://testdb?TC_INITSCRIPT=init_mysql.sql
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
