--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -1,26 +1,19 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/cinema_gateway?allowPublicKeyRetrieval=true&useSSL=false
-    username: test
-    password: test
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        ddl-auto: update
-
 logging:
   level:
     org:
       hibernate:
         SQL: DEBUG
         type: TRACE
-
 server:
   error:
     include-message: always
   servlet:
-    context-path: /cinema-gateway
+    context-path: /cinema
 springdoc:
   swagger-ui:
     path: /swagger.html
