CINEMA_API_2.2 - update build gradle and date/date-time format

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    format:
+      date: yyyy-MM-dd
+      date-time: yyyy-MM-dd HH:mm:ss
   jpa:
     properties:
       hibernate:
