--- a/war/src/test/resources/application.yml
+++ b/war/src/test/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    format:
+      date: yyyy-MM-dd
+      date-time: yyyy-MM-dd HH:mm:ss
   flyway:
     enabled: false
   datasource:
