--- a/war/src/test/resources/application.yml
+++ b/war/src/test/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  mvc:
+    format:
+      date: yyyy-MM-dd
+      date-time: yyyy-MM-dd HH:mm:ss
+  flyway:
+    enabled: false
   datasource:
     url: jdbc:tc:mysql:5.7.34://testdb?TC_INITSCRIPT=init_mysql.sql
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
