CINEMA_API_3 - constraint for range, wip constraint factory for ranges

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -8,7 +8,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 server:
-  error:
-    include-message: always
   servlet:
-    context-path: /cinema
+    context-path: /gateway
