--- a/war/src/main/resources/config/application-devel.yml
+++ b/war/src/main/resources/config/application-devel.yml
@@ -17,6 +17,11 @@ springdoc:
   swagger-ui:
     path: /swagger.html
 
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
+
 logging:
   level:
     org.hibernate.SQL: DEBUG
