--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -7,19 +7,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: DEBUG
-        type: TRACE
 server:
-  error:
-    include-message: always
   servlet:
-    context-path: /cinema
-springdoc:
-  swagger-ui:
-    path: /swagger.html
-
-
+    context-path: /gateway
