--- a/war/src/main/resources/config/application-devel.yml
+++ b/war/src/main/resources/config/application-devel.yml
@@ -4,12 +4,25 @@ spring:
     url: jdbc:mysql://localhost:3307/?allowPublicKeyRetrieval=true&useSSL=false
     user: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver
     default-schema: cinema_gateway
-
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
   datasource:
     url: jdbc:mysql://localhost:3307/cinema_gateway?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver
+springdoc:
+  swagger-ui:
+    path: /swagger.html
 
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type: TRACE
