CINEMA_API_3_4 - event implementation, some adjustments beside EVENT, more unit and validation tests. Still work in progress

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     format:
       date: yyyy-MM-dd
       date-time: yyyy-MM-dd HH:mm:ss
+      time: HH:mm
   jpa:
     properties:
       hibernate:
