--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+name: Gradle Ci
 
-name: Gradle Ci 
-
-# Controls when the workflow will run
-on: 
-  # Triggers the workflow on push or pull request events but only for the "master" branch
+on:
   push:
     branches: ["*"]
     
@@ -22,5 +18,7 @@ jobs:
         java-version: 1.8
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
+    - name: Clean Gradle
+      run: ./gradlew clean
     - name: Build with Gradle
       run: ./gradlew build
