CINEMA_API_3_4 - controller tests are finally done, integration tests wip. Did some util classes for Range, and entity -> dto conversion. The rest is TODO!

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  flyway:
+    enabled: true
   mvc:
     format:
       date: yyyy-MM-dd
@@ -11,3 +13,7 @@ spring:
 server:
   servlet:
     context-path: /gateway
+
+springdoc:
+  swagger-ui:
+    path: /swagger.html
