--- a/war/src/main/resources/config/application-devel.yml
+++ b/war/src/main/resources/config/application-devel.yml
@@ -1,10 +1,8 @@
 spring:
-  flyway:
-    enabled: true
-    url: jdbc:mysql://localhost:3307/?allowPublicKeyRetrieval=true&useSSL=false
-    user: root
-    password: root
-    default-schema: cinema_gateway
+  url: jdbc:mysql://localhost:3307/?allowPublicKeyRetrieval=true&useSSL=false
+  user: root
+  password: root
+  default-schema: cinema_gateway
   jpa:
     properties:
       hibernate:
@@ -13,9 +11,6 @@ spring:
     url: jdbc:mysql://localhost:3307/cinema_gateway?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: root
-springdoc:
-  swagger-ui:
-    path: /swagger.html
 
 server:
   error:
@@ -24,5 +19,6 @@ server:
 
 logging:
   level:
+    root: TRACE
     org.hibernate.SQL: DEBUG
     org.hibernate.type: TRACE
