small corrections, changed dominant entity of manytomany connection, .sql script change because there was a mistake. new context path

--- a/war/src/main/resources/application.yml
+++ b/war/src/main/resources/application.yml
@@ -12,7 +12,7 @@ server:
   error:
     include-message: always
   servlet:
-    context-path: /cinema
+    context-path: /cinema-gateway
 springdoc:
   swagger-ui:
     path: /swagger.html
